--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:icon="@drawable/logo"
+        android:icon="@mipmap/ic_samia"
         android:label="SA BY SAMIA">
         <activity
             android:name=".MainActivity"
